<resources>
    <string name="app_name">Flowledge</string>
    <string name="not_log_in">No se pudo iniciar sesión</string>
    <string name="log_out">Log Out</string>
    <string name="in">Iniciar sesión</string>
    <string name="registrar">Registrarse</string>
    <string name="not_close_session">No se pudo cerrar sesión</string>
    <string name="not_revoke">No se pudo revocar el acceso</string>
    <string name="not_firebase_auth">No se pudo autenticar con Firebase</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="shr_hint_username">Cédula</string>
    <string name="shr_hint_password">Contraseña</string>
    <string name="shr_button_signIn">Iniciar sesión</string>
    <string name="shr_button_cancel">Volver</string>
    <string name="shr_error_password">Incorrect username or password.</string>

    <string name="formRegDigCedula">Cédula de identidad</string>
    <string name="formRegNickname">Alias</string>
    <string name="formRegCorreo">Correo electrónico</string>
    <string name="formRegContrasena">Contraseña</string>
    <string name="formRegConContrasena">Confirmar contraseña</string>
    <string name="formRegTitle">Formulario de Registro</string>
    <string name="formRegSaveButton">Hecho</string>

    <string name="profile_post">Post</string>
    <string name="profile_comments">Comentarios</string>
    <string name="profile_seguidores">Seguidores</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
