<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_log_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LogInActivity">

    <LinearLayout
        android:id="@+id/principal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="48dp"
                    android:layout_marginBottom="16dp"
                    app:srcCompat="@drawable/prueba2" />

                <TextView
                    android:id="@+id/titulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingBottom="10dp"
                    android:text="@string/app_name"
                    android:textAllCaps="true"
                    android:textSize="24sp" />


                <!-- Snippet from "Add text fields" section goes here. -->
                <android.support.design.widget.TextInputLayout
                    style="@style/Widget.Shrine.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/cedulaText"
                    android:hint="@string/shr_hint_username">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/cedula2in"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/password_text_input"
                    style="@style/Widget.Shrine.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/shr_hint_password"
                    app:errorEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/passwordin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>
                <!-- Snippet from "Add buttons" section goes here. -->

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.button.MaterialButton
                        android:id="@+id/next_button"
                        style="@style/Widget.Shrine.Button.Ok"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:text="@string/shr_button_signIn" />

                    <android.support.design.button.MaterialButton
                        android:id="@+id/registro_button"
                        style="@style/Widget.Shrine.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="12dp"
                        android:layout_marginRight="12dp"
                        android:layout_toStartOf="@id/next_button"
                        android:layout_toLeftOf="@id/next_button"
                        android:text="@string/registrar" />

                </RelativeLayout>

            </LinearLayout>

        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/formularioregistrar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:visibility="gone">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/registroFormTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/formRegTitle"
                    android:paddingBottom="10dp"
                    android:textAllCaps="true"
                    android:textSize="24sp" />
                <!-- Snippet from "Add text fields" section goes here. -->
                <android.support.design.widget.TextInputLayout
                    style="@style/Widget.Shrine.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/cedulaFormText"
                    android:hint="@string/formRegDigCedula">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/cedula2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

                <!-- Snippet from "Add text fields" section goes here. -->
                <android.support.design.widget.TextInputLayout
                    style="@style/Widget.Shrine.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/nombreFormText"
                    android:hint="@string/formRegNickname">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/nombre2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

                <!-- Snippet from "Add text fields" section goes here. -->
                <android.support.design.widget.TextInputLayout
                    style="@style/Widget.Shrine.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/correoFormText"
                    android:hint="@string/formRegCorreo">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/correo2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

                <!-- Snippet from "Add text fields" section goes here. -->
                <android.support.design.widget.TextInputLayout
                    style="@style/Widget.Shrine.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/contrasenaFormText"
                    android:hint="@string/formRegContrasena">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

                <!-- Snippet from "Add text fields" section goes here. -->
                <android.support.design.widget.TextInputLayout
                    style="@style/Widget.Shrine.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/concontrasenaFormText"
                    android:hint="@string/formRegConContrasena">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/concontrasena"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <android.support.design.button.MaterialButton
                    android:id="@+id/guardar"
                    style="@style/Widget.Shrine.Button.Ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/formRegSaveButton" />

                <android.support.design.button.MaterialButton
                    android:id="@+id/button_cancelar"
                    style="@style/Widget.Shrine.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_toStartOf="@id/guardar"
                    android:layout_toLeftOf="@id/guardar"
                    android:text="@string/shr_button_cancel" />
                </RelativeLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/formularioin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="16dp"
        android:visibility="gone">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="16dp"
            android:tint="?android:attr/textColorPrimary"
            app:srcCompat="@drawable/prueba2" />


        <!-- Snippet from "Add text fields" section goes here. -->
        <android.support.design.widget.TextInputLayout
            style="@style/Widget.Shrine.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/shr_hint_username">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/cedulain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_text_inut"
            style="@style/Widget.Shrine.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/shr_hint_password"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/passwrdin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</RelativeLayout>
